Main menu, editor interface, camera control
No longer a need for the hierarchy or project window. Only game view and inspector is intended to be used when designing planets

--- a/Planet Designer/Packages/manifest.json
+++ b/Planet Designer/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.coffee.ui-effect": "https://github.com/mob-sakai/UIEffect.git",
     "com.jimmycushnie.noisynodes": "https://github.com/JimmyCushnie/Noisy-Nodes.git",
     "com.unity.collab-proxy": "1.17.2",
     "com.unity.ide.rider": "3.0.15",
